0.2.11
Corrected icon entry in desktop files.
Updated 'Comment Selection' example tool to include commenting - sh, Python, Makefile, .desktop, Perl, C++, C, Objective-C, C/C++/ObjC Header, Java, Pascal, HTML.
Updated open file with line number to scroll to line num immediately.
Added optionsal switching to line number when opening file using /path/to/file@LINENUM.
Minor doxy documentation fix.

0.2.10
Fixed changed callback definition when closing.
Fixed toolbar button setsensitive on startup.
More tweaks for'Search For Define'.
Added email address to copyright notice in about box.
Updated about box web site link.
Tweaked 'Search For Define' to check for partial name.
Multiple hits now shown in Doxygen documentation.
Find in Doxygen documentation now MUCH faster.
Updated docs/Doxyfile.

0.2.9
Added seperators into 'View' menu.
Added toggle line nubers to 'View' menu.
Added toggle wrap lines to 'View' menu.
Added toggle higlight current line to 'View' menu.
Added toggle syntax highlight to 'View' menu.
Added toggle auto show completions to 'View' menu.
Fixed regex search missing first search term if it begins at the cursor position.

0.2.8
Added 'Diff two files' to example tools.
Added new envrironment variable exported to external tools 'KKEDIT_FILE_LIST' which is a ';' separated list of ALL open file paths.
Fixed segfault when ctags reports rubbish ( ie lua file using "--[[ ... ]]" syntax for long comments.

0.2.7
Fixed not cancelling close when clicking window close button with unsaved changes.
Improved SHIFT clicking a link in generated doxygen documentation, now more accurate.
Generally improved searching for function definitions.
Loading files with binary data now loads as much data as it can until an invalid character is encountered.
Fixed not cancelling quit with unsaved files.
Updated kkedit-plugins.h so plugins will need updating as well.
Added some debug code ( only for devs ).
Removed folder names and backup (*~) files to open from tab popup.